--- a/less/navs.less
+++ b/less/navs.less
@@ -91,10 +91,9 @@
     }
   }
 }
-@media (max-width: @screen-sm-min) {
+@media (max-width: @screen-xs-max) {
   .ku-nav {
     display: none;
-    background-color: @gray-lighter!important;
   }
 }
 // Tabs
