--- a/less/navbar.less
+++ b/less/navbar.less
@@ -175,8 +175,8 @@
 
 .container,
 .container-fluid {
-  > .navbar-header,
-  > .navbar-collapse {
+  > .navbar-collapse,
+  > .navbar-header {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -307,8 +307,8 @@
       border: 0;
       box-shadow: none;
 
-      > li > a,
-      .dropdown-header {
+      .dropdown-header,
+      > li > a {
         padding: 5px 15px 5px 25px;
       }
 
@@ -866,7 +866,9 @@
       background-color: @white-color;
 
       &.global-search-options-toggle {
-        font-size: 12px;
+        @media (min-width: @screen-md) {
+          font-size: 12px;
+        }
       }
     }
 
