--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -218,7 +218,6 @@
 // Float images right on single column spans:
 
 #gridsidebar .single-column .column1,
-.double-column [class*=column],
 .one-two-column .column1,
 .quad-column [class*=column],
 .triple-column [class*=column],
@@ -233,6 +232,7 @@
 .one-two-column .column2,
 .three-one-column .column1,
 .two-one-column .column1,
-.two-one-one-column .column1 {
+.two-one-one-column .column1,
+.double-column [class*=column] {
   .img-left();
 }
