--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -221,7 +221,13 @@
 .one-two-column .column1,
 .quad-column [class*=column],
 .triple-column [class*=column],
-.two-one-column .column2 {
+.one-three-column .column1,
+.three-one-column .column2,
+.two-one-column .column2,
+.two-one-one-column .column2,
+.two-one-one-column .column3,
+.one-one-two-column .column1,
+.one-one-two-column .column2, {
   .img-right();
 }
 // Float images left on multiple column spans
