--- a/less/panels.less
+++ b/less/panels.less
@@ -452,6 +452,6 @@
 }
 // KU specific style to fix spacing in editor accordion plugin:
 
-.accordion-hidden {
-  display: none;
-}
+// .accordion-hidden {
+//   display: none;
+// }
