--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -92,6 +92,11 @@ body {
   &.editor-accordions {
     background-color: #fbfbf7;
     padding: 0 15px;
+    // KU specific style to fix spacing in editor accordion plugin:
+
+    .accordion-hidden {
+      display: none;
+    }
   }
 }
 
