--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -218,6 +218,7 @@
 // Float images right on single column spans:
 
 #gridsidebar .single-column .column1,
+ .GridStandard .double-column [class*=column],
 .one-two-column .column1,
 .quad-column [class*=column],
 .triple-column [class*=column],
