--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -83,6 +83,7 @@
       }
 
       .nyhedsliste_dato {
+        margin-left: 7px;
         color: @gray-light;
         font-weight: 600;
         .pull-right();
@@ -236,12 +237,12 @@
 // Float images left on multiple column spans
 
 .gridcontent:not(#gridsidebar) .single-column .column1,
+.gridcontent:not(.GridStandard) .double-column [class*=column],
 .one-one-two-column .column3,
 .one-three-column .column2,
 .one-two-column .column2,
 .three-one-column .column1,
 .two-one-column .column1,
-.two-one-one-column .column1,
-.double-column [class*=column] {
+.two-one-one-column .column1 {
   .img-left();
 }
