--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -8,7 +8,7 @@
         display: none;
       }
       .media-body {
-        padding-left: 0;
+        padding-left: 0!important;
         & > .media-right {
           float: right;
         }
