--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -9,7 +9,8 @@
       }
       .media-body {
         padding-left: 0!important;
-        & > .media-right {
+        > .media-right,
+        + .media-right {
           float: right;
         }
       }
