--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -198,7 +198,7 @@
     }
   }
 }
-@media (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
+@media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
   // Outline arrow style for multiple column spans
   .one-one-two-column .column2,
   .one-two-column .column2,
