--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -16,14 +16,14 @@ main {
   flex-direction: column;
   justify-content: space-between;
   &:extend(.clearfix all);
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-sm) {
     width: @container-sm;
     margin: 0 auto;
   }
-  @media (min-width: @screen-md-min) {
+  @media (min-width: @screen-md) {
     width: @container-md;
   }
-  @media (min-width: @screen-lg-min) {
+  @media (min-width: @screen-lg) {
     width: @container-lg;
   }
 }
