--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -176,7 +176,7 @@ hr {
 [role="button"] {
   cursor: pointer;
 }
-@media (max-width: @screen-sm-min) {
+@media (max-width: @screen-sm) {
   .btn,
   .form-control {
     // font-size: @font-size-large!important;
