--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -198,7 +198,7 @@
     }
   }
 }
-@media (min-width: @screen-xs-min) {
+@media (min-width: @screen-xs) {
   // Outline arrow style for multiple column spans
   .one-one-two-column .column2,
   .one-two-column .column2,
