--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -35,7 +35,7 @@
 #globalfooter {
   position: relative;
   background: @gray-light;
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-sm) {
     background: linear-gradient(to bottom, rgba(@gray-light, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
   }
   color: @white-color;
@@ -151,7 +151,7 @@
 
 .social-items {
   width: 80%;
-  @media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
+  @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     width: 100%;
   }
 
