--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -75,7 +75,7 @@
   &.smal {
     .media {
       .media-heading {
-        @media (min-width: @screen-sm-min) {
+        @media (min-width: @screen-sm) {
           // Make room for the date:
           display: inline-block;
           max-width: 82%;
