--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -232,7 +232,7 @@ table.properties>tbody>tr:hover {
 }
 
 #purecontent .person_text h2.title a {
-  color: #252525 !important;
+  color: inherit !important;
 }
 
 .rendering h2 {
@@ -242,6 +242,7 @@ table.properties>tbody>tr:hover {
 .striped-list h2.title {
   font-size: 14px !important;
   font-weight: 600 !important;
+  color: #252525 !important;
 }
 
 .view_title .title {
@@ -279,6 +280,7 @@ table.properties>tbody>tr:hover {
 }
 
 .publikationsliste .view_container ul.tabs>li:nth-child(1), .publikationsliste .view_container ul.tabs>li:nth-child(3) {
+  /* Hide certain tabs */
   display: none;
   width: 0;
 }
