--- a/docs/_includes/components/ku-dropdowns.html
+++ b/docs/_includes/components/ku-dropdowns.html
@@ -1,7 +1,7 @@
 <div class="bs-docs-section">
   <h1 id="ku-dropdowns" class="page-header">KU drop downs</h1>
   <p>Component which can display a list of clickable links.</p>
-  <div class="bs-example" data-example-id="ku-dropdowns">
+  <div class="bs-example" data-example-id="ku-dropdowns" id="ku-dropdowns-box">
     <div class="linkslist">
       <input type="checkbox" id="list-item">
       <label for="list-item" class="menu-trigger">Vælg</label>
