--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -13,4 +13,5 @@
     Lorem ipsum...
   </div>
   {% endhighlight %}
+  Use <code>&lt;div class=&quot;factbox factbox-left&quot;&gt;</code> in order to left align the fact box.
 </div>
