--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -103,7 +103,7 @@
             <button type="button" class="btn btn-default dropdown-toggle global-search-options-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="sr-only">Vis søgemuligheder</span></button>
             <ul class="dropdown-menu dropdown-menu-right global-search-options-filter">
             </ul>
-            <button class="btn btn-default global-search-submit" name="sa" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default global-search-submit" aria-label="Søg" name="sa" type="submit"><span class="glyphicon glyphicon-search"></span></button>
           </div>
         </div>
       </form>
