--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -95,13 +95,18 @@ body {
   }
 }
 
-.mce-container-body [aria-label~="accordion"] {
-  // Show accordion icon in the editor - because it's hidden from old templates
-  display: inline-block;
-}
-
-// KU specific style to fix spacing in editor accordion plugin:
-
 .accordion-hidden {
   display: none;
 }
+
+.mce-container-body {
+  [aria-label~="accordion"] {
+    // Show accordion icon in the editor - because it's hidden from old templates
+    display: inline-block;
+  }
+  .accordion-hidden {
+    display: block;
+  }
+}
+
+// KU specific style to fix spacing in editor accordion plugin:
