--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -110,7 +110,7 @@ body {
     &.mce-content-body {
       // Put cursor below accordions
       .accordion-hidden {
-        display: none;
+        display: block;
       }
     }
   }
