Flex box margins

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -142,6 +142,10 @@ nav {
     .panel:first-child {
       margin-top: @grid-gutter-height;
     }
+
+    .flexiblebox-as-rightbox:first-child {
+      margin-top: @grid-gutter-height;
+    }
   }
 }
 
