--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -111,6 +111,7 @@ body {
       // Put cursor below accordions
       .accordion-hidden {
         display: block;
+        margin: 0;
       }
     }
   }
