Flexible box dynamic height

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -583,7 +583,7 @@
 @media all and (max-width: @screen-xs-max) {
   // All flexboxes now require dynamic height as they are stacked in mobile
   .gridbox {
-    height: auto;
+    height: auto!important;
 
     .text {
       display: none;
