--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -130,6 +130,9 @@ nav {
 
 .right-side {
   .pull-right;
+  @media (max-width: @screen-xs-max) {
+    margin-top: @grid-gutter-height;
+  }
   @media (min-width: @screen-sm) {
     .gcitem:first-child {
       margin-top: @grid-gutter-height;
