--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -38,6 +38,9 @@ ul {
   &.stripped {
     list-style-type: none;
     padding-left: 0;
+    li {
+      background-repeat: no-repeat;
+    }
   }
 }
 
