--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -197,7 +197,7 @@
   margin: 10px 0;
 
   h3 {
-    color: #808080;
+    color: @gray-light;
     font-weight: 700;
     font-size: 1em;
     display: inline;
