--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -131,8 +131,8 @@
   $(function() {
     setActiveLinks();
 
-    $('.nav li a').click(function() {
-      $('.nav li').removeClass('active');
+    $('#leftmenu .nav li a').click(function() {
+      $('#leftmenu .nav li').removeClass('active');
       $(this).parent().addClass('active');
     });
 
