--- a/less/navs.less
+++ b/less/navs.less
@@ -110,10 +110,13 @@
     // Actual tabs (as links)
     > a {
       color: @text-color;
+      background-color: @nav-tabs-bg-color;
       margin-right: 2px;
       line-height: @line-height-base;
-      border: 1px solid transparent;
-      border-radius: @border-radius-base @border-radius-base 0 0;
+      border-top: 1px solid @gray;
+      border-right: 1px solid @gray;
+      border-left: 1px solid @gray;
+      border-radius: @nav-tabs-border-radius;
       &:hover {
         background-color: @ku-nav-tabs-and-pills-hover-bg-color
         //border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
@@ -127,6 +130,7 @@
       &:focus {
         background-color: @nav-tabs-active-link-hover-bg;
         border: 1px solid @nav-tabs-active-link-hover-border-color;
+        color: @nav-tabs-active-link-hover-color;
         border-bottom-color: transparent;
         cursor: default;
       }
@@ -166,6 +170,7 @@
       &:hover {
         color: @nav-pills-active-link-hover-color;
         background-color: @nav-pills-active-link-hover-bg;
+        cursor: default;
       }
     }
   }
@@ -183,6 +188,7 @@
     // Active state
     &.active > a {
         border-color: @nav-pills-active-link-hover-bg;
+        cursor: default;
       }
 
   }
