--- a/less/variables.less
+++ b/less/variables.less
@@ -588,16 +588,17 @@
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
-@nav-tabs-border-color:                     @gray-ddd;
+@nav-tabs-border-radius:                    @border-radius-base @border-radius-base 0 0;
+@nav-tabs-border-color:                     @gray;
 @nav-tabs-bg-color:                         #f3f3f3;
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             @white-color;
+@nav-tabs-active-link-hover-bg:             @gray-light;
 @nav-tabs-active-link-hover-color:          @white-color;
-@nav-tabs-active-link-hover-border-color:   @gray-ddd;
+@nav-tabs-active-link-hover-border-color:   @gray-light;
 
-@nav-tabs-justified-link-border-color:            #ddd;
-@nav-tabs-justified-active-link-border-color:     @body-bg;
+@nav-tabs-justified-link-border-color:            @gray-light;
+@nav-tabs-justified-active-link-border-color:     @white-color;
 
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
