--- a/less/variables.less
+++ b/less/variables.less
@@ -969,7 +969,7 @@
 //** Breadcrumb text color
 @breadcrumb-color:              @gray-dark;
 //** Text color of current page in the breadcrumb
-@breadcrumb-active-color:       #6f727b;
+@breadcrumb-active-color:       #737682;
 //** Textual separator for between breadcrumb elements
 @breadcrumb-separator:          ">";
 
