--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -67,12 +67,16 @@ figure {
     height: auto;
   }
 }
-
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 */
   .figure,
   figure {
-    width: 100%;
+    //width: 100%;
+    &.image {
+      img {
+        width: 100%;
+      }
+    }
   }
 }
 // KU specific - editor classes
@@ -111,10 +115,9 @@ figcaption {
   display: table-caption;
   caption-side: bottom;
 }
-
 // .fritekst_over_img,
 // .uden-boks-top {
-  // We no longer support this!
-  // position: absolute;
-  // margin-top: -39px;
+// We no longer support this!
+// position: absolute;
+// margin-top: -39px;
 // }
