Figures for IE11

--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -74,7 +74,7 @@ figure {
     //width: 100%;
     &.image {
       img {
-        width: 100%;
+        width: 100%!important;
       }
     }
   }
