--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -101,6 +101,7 @@
     </div>
   </div>
 </footer>
+<div class="scrolltop fade" id="scrolltop" title="Scroll to top" aria-label="Scroll to top"><span class="glyphicon-menu-up"></span></div>
 <script>
   var pageTitle = 'Titel';
 </script>
