--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -842,7 +842,6 @@ h1[id] {
   float: none;
   padding: 45px 15px 15px;
   margin: 0 -15px 15px;
-  overflow: hidden;
   clear: both;
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
@@ -855,9 +854,9 @@ h1[id] {
   content: " ";
 }
 
-/* [data-example-id*='blockquote'] {
+[data-example-id*='blockquote'], [data-example-id*='ku-factboxes'] {
   overflow: hidden;
-} */
+}
 
 /* Echo out a label for the example */
 
