--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -35,12 +35,13 @@
 }
 
 .dataTable {
+  font-size: 14px;
   clear: both;
   margin-top: 6px !important;
   margin-bottom: 6px !important;
   max-width: none !important;
   word-wrap: break-word;
-  table-layout: auto!important;
+  table-layout: auto !important;
   /*border-collapse: separate !important;*/
 }
 
@@ -48,9 +49,12 @@
   background-color: #f5f5f5;
 }
 
-/* .dataTable td, .dataTable th {
-  box-sizing: content-box;
-} */
+@media screen and (min-width: 768px) {
+  .dataTable {
+    font-size: 12px;
+  }
+}
+
 .dataTable td.dataTables_empty, .dataTable th.dataTables_empty {
   text-align: center;
 }
