--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -10,8 +10,8 @@
   overflow: hidden;
 
   .embed-responsive-item,
-  iframe,
   embed,
+  iframe,
   object,
   video {
     position: absolute;
@@ -23,17 +23,16 @@
     border: 0;
   }
 }
-
 // Modifier class for 16:9 aspect ratio
+
 .embed-responsive-16by9 {
   padding-bottom: 56.25%;
 }
-
 // Modifier class for 4:3 aspect ratio
+
 .embed-responsive-4by3 {
   padding-bottom: 75%;
 }
-
 
 .video-container {
   video::-webkit-media-controls {
@@ -52,6 +51,14 @@
   margin-right: 5px;
 }
 
+.mdia-controls {
+  // Audio slider
+  input[type=range] {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+}
 @media all and (min-width: @screen-sm) {
   .media-controls button {
     font-size: inherit;
