--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -51,7 +51,7 @@
   margin-right: 5px;
 }
 
-.mdia-controls {
+.media-controls {
   // Audio slider
   input[type=range] {
     display: inline-block;
