--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -57,6 +57,7 @@
     display: inline-block;
     width: auto;
     vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
   }
 }
 @media all and (min-width: @screen-sm) {
