--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -110,13 +110,14 @@ body {
     &.mce-content-body {
       // Put cursor below accordions
       .accordion-hidden {
-        &:focus-within {
           display: block;
           margin: 0;
-        }
         // - but hide sibsequent cursor blocks
-        ~ .accordion-hidden {
+        + .accordion-hidden {
           display: none;
+          ~ .accordion-hidden {
+            display: none;
+          }
         }
       }
     }
