--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -21,12 +21,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tfoot,
+    > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-        > th,
-        > td {
+        > td,
+        > th {
           border: 1px dotted @table-border-color;
         }
       }
@@ -110,14 +110,19 @@ body {
     &.mce-content-body {
       // Put cursor below accordions
       .accordion-hidden {
-          display: block;
-          margin: 0;
+        display: block;
+        margin: 0;
         // - but hide sibsequent cursor blocks
         + .accordion-hidden {
           display: none;
-          ~ .accordion-hidden {
-            display: none;
-          }
+        }
+      }
+    }
+
+    .panel-accordion {
+      + .accordion-hidden {
+        + .panel-accordion {
+          margin-top: -16px;
         }
       }
     }
