--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -230,41 +230,41 @@
 }
 // Float images right on single column spans:
 
-// #gridsidebar .single-column .column1,
-// .one-one-two-column .column1,
-// .one-one-two-column .column2,
-// .one-three-column .column1,
-// .one-two-column .column1,
-// .quad-column [class*=column],
-// .three-one-column .column2,
-// .triple-column [class*=column],
-// .two-one-column .column2,
-// .two-one-one-column .column2,
-// .two-one-one-column .column3 {
-//   .img-right();
-// }
+#gridsidebar .single-column .column1,
+.one-one-two-column .column1,
+.one-one-two-column .column2,
+.one-three-column .column1,
+.one-two-column .column1,
+.quad-column [class*=column],
+.three-one-column .column2,
+.triple-column [class*=column],
+.two-one-column .column2,
+.two-one-one-column .column2,
+.two-one-one-column .column3 {
+  .img-right();
+}
 // Float images left on multiple column spans
 
-// .double-column [class*=column],
-// .gridcontent:not(#gridsidebar) .single-column .column1,
-// .one-one-two-column .column3,
-// .one-three-column .column2,
-// .one-two-column .column2,
-// .three-one-column .column1,
-// .two-one-column .column1,
-// .two-one-one-column .column1 {
-//   .img-left();
-// }
+.double-column [class*=column],
+.gridcontent:not(#gridsidebar) .single-column .column1,
+.one-one-two-column .column3,
+.one-three-column .column2,
+.one-two-column .column2,
+.three-one-column .column1,
+.two-one-column .column1,
+.two-one-one-column .column1 {
+  .img-left();
+}
 // GridStandard double columns override
 
-// .GridStandard .double-column [class*=column] {
-//   .img-right();
-//
-//   .media-right {
-//     display: block!important;
-//   }
-//
-//   .news-teaser {
-//     margin-left: 0!important;
-//   }
-// }
+.GridStandard .double-column [class*=column] {
+  .img-right();
+
+  .media-right {
+    display: block!important;
+  }
+
+  .news-teaser {
+    margin-left: 0!important;
+  }
+}
