--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -616,7 +616,7 @@
     }
   }
 }
-@media all and (min-width: @screen-sm) {
+@media all and (min-width: @screen-xs) {
   // Set gridbox height for tablet upwards
   .gridbox {
     &.size1 {
