--- a/docs/_includes/components/spinner.html
+++ b/docs/_includes/components/spinner.html
@@ -4,9 +4,11 @@
   <h2>KU spinner</h2>
   <p>Use this loading spinner whenever you need to provide feedback to users.</p>
   <div class="bs-example" data-example-id="default-spinner">
-    <div class="ku-loading"></div>
+    <div class="ku-loading" role="status"><span class="sr-only">Loading...</span></div>
   </div>
   {% highlight html %}
-  <div class="ku-loading"></div>
+  <div class="ku-loading" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
   {% endhighlight %}
 </div>
