--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -151,18 +151,16 @@
 }
 
 .ku-loading {
+  display: inline-block;
+  vertical-align: text-bottom;
   border-bottom: 3px solid @gray;
   border-left: 3px solid @gray;
   border-right: 3px solid @gray;
   border-top: 3px solid @ku-red;
-  border-radius: 100%;
-  height: 25px;
-  width: 25px;
-  animation: ku-loading 0.6s infinite linear;
-  overflow: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  animation: ku-loading 0.75s infinite linear;
 }
 // Jump to ID
 
