--- a/less/variables.less
+++ b/less/variables.less
@@ -160,6 +160,9 @@
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
+// Placeholder text colors
+@placeholder-text-color: #757575;
+
 //** Global textual link color.
 @link-color:            #165aad;
 //** Link hover color set via `darken()` function.
