--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -230,7 +230,7 @@
 }
 // Float images right on single column spans:
 
-#gridsidebar .single-column .column1,
+.right-side, #gridsidebar .single-column .column1,
 .one-one-two-column .column1,
 .one-one-two-column .column2,
 .one-three-column .column1,
