--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1053,6 +1053,9 @@
       }
     }
   }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) and (min-width: @screen-md) {
   // Single columns
   .one-two-column .column1,
   .triple-column [class*=column],
@@ -1067,6 +1070,7 @@
     }
   }
 }
+
 @supports (-ms-ime-align: auto) {
   /* IE Edge */
   .gridbox.with-img {
@@ -1091,7 +1095,6 @@
     }
   }
 }
-
 .boxlink {
   color: inherit!important;
   display: block;
