--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1053,6 +1053,21 @@
       }
     }
   }
+
+  // Single columns
+  .one-two-column .column1,
+  .triple-column [class*=column],
+  .two-one-column .column2 {
+    .gridbox.with-img {
+      &.size1 {
+        .box2 img {
+          height: auto;
+          width: auto;
+          min-width: 100%;
+        }
+      }
+    }
+  }
 }
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) and (min-width: @screen-md) {
