IE Image scaling

--- a/less/mixins/ku-content-elements.less
+++ b/less/mixins/ku-content-elements.less
@@ -29,6 +29,7 @@
 .img-fix-for-ie() {
   // IE doesn't understand flex and object-cover, so we have to give special treatment...  #?$¤!%...
   min-height: 100%;
+  max-width: none;
   position: absolute;
   top: 50%;
   left: 50%;
