--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1070,7 +1070,7 @@
   }
 }
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) and (min-width: @screen-md) {
+@media all and (min-width: @screen-md) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   // Single columns
   .one-two-column .column1,
   .triple-column [class*=column],
