--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -98,6 +98,9 @@
       .nyhedsliste_indhold {
         clear: both;
       }
+      .news-teaser {
+        margin-bottom: 0;
+      }
     }
   }
 }
@@ -113,7 +116,7 @@
     }
 
     .news-teaser {
-      margin-top: 3px;
+      margin-top: -10px;
       margin-bottom: 0;
     }
   }
