--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -98,9 +98,6 @@
       .nyhedsliste_indhold {
         clear: both;
       }
-      .news-teaser {
-        margin-bottom: 0;
-      }
     }
   }
 }
@@ -116,7 +113,7 @@
     }
 
     .news-teaser {
-      margin-top: -10px;
+      margin-top: 0;
       margin-bottom: 0;
     }
   }
