News flex boxes

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -877,6 +877,7 @@
     .size1 {
       flex-direction: row;
       background: @white-color;
+      border-bottom: 1px dotted @gray;
 
       &.with-img {
         .header {
@@ -894,9 +895,9 @@
           }
 
           .header {
-            font-size: 36px;
+            font-size: 34px;
             font-weight: normal;
-            line-height: 1.11111em;
+            line-height: 1.21111em;
           }
 
           .text {
