--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -95,3 +95,11 @@
     }
   }
 }
+@media all and (min-width: @screen-sm) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  // IE11 hack
+  .advanced-list {
+    li {
+      min-height: auto;
+    }
+  }
+}
